# quant-platform

./: go_project.md  go_python_project.md  go_python_project_zh.md  project.md  project_func.md  rust_project_zh.md  strategies.md
backend_service/: go.mod  go_pro.md
backend_service/internal/handlers/: user_handlers.go
backend_service/internal/router/: router.go
backend_service/internal/types/: user_types.go
backend_service/pkgs/pb/: api.proto
blockchain_infrastructure/: QUICK_REFERENCE.md  RUST_BEGINNER_GUIDE.md  STEP_BY_STEP_TUTORIAL.md  UnComplete_Function.md  rust_project.md
blockchain_infrastructure/defi-blockchain-node/node/: Cargo.toml
blockchain_infrastructure/defi-blockchain-node/runtime/: Cargo.toml
blockchain_infrastructure/defi-blockchain-node/runtime/src/: lib.rs
smart_contracts/: DEFI_DEVELOPMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md
smart_contracts/cache/: solidity-files-cache.json  test-failures
smart_contracts/src/: DQPGovernor.sol  DQPTimelock.sol  DQPToken.sol  LiquidityPool.sol  PriceOracle.sol  StrategyVault.sol
smart_contracts/test/: DQPGovernor.t.sol  DQPToken.t.sol  LiquidityPool.t.sol  PriceOracle.t.sol  StrategyVault.t.sol
