[package]
name = "defi-blockchain-node"
version = "1.0.0"
description = "DeFi-focused blockchain node with EVM compatibility and MEV protection."
authors = ["DeFi Development Team"]
homepage = "https://substrate.io/"
edition = "2021"
license = "MIT-0"
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "defi-blockchain-node"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"]}

# Substrate Client
sc-cli = { version = "0.36.0" }
sp-core = { version = "28.0.0" }
sc-executor = { version = "0.32.0" }
sc-network = { version = "0.34.0" }
sc-service = { version = "0.35.0" }
sc-telemetry = { version = "15.0.0" }
sc-transaction-pool = { version = "28.0.0" }
sc-transaction-pool-api = { version = "28.0.0" }
sc-offchain = { version = "29.0.0" }
sc-consensus-aura = { version = "0.34.0" }
sp-consensus-aura = { version = "0.32.0" }
sc-consensus = { version = "0.33.0" }
sc-consensus-grandpa = { version = "0.19.0" }
sp-consensus-grandpa = { version = "13.0.0" }
sc-client-api = { version = "28.0.0" }
sp-runtime = { version = "31.0.1" }
sp-io = { version = "30.0.0" }
sp-timestamp = { version = "26.0.0" }
sp-inherents = { version = "26.0.0" }
sp-keyring = { version = "31.0.0" }
frame-system = { version = "28.0.0" }
pallet-transaction-payment = { version = "28.0.0", default-features = false }

# EVM Support
fc-consensus = { version = "2.0.0-dev" }
fc-db = { version = "2.0.0-dev" }
fc-mapping-sync = { version = "2.0.0-dev" }
fc-rpc = { version = "2.0.0-dev" }
fc-rpc-core = { version = "1.1.0-dev" }
fc-storage = { version = "1.0.0-dev" }
fp-dynamic-fee = { version = "1.0.0" }
fp-evm = { version = "3.0.0-dev" }
fp-rpc = { version = "3.0.0-dev" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
sp-api = { version = "26.0.0" }
sc-rpc-api = { version = "0.33.0" }
sp-blockchain = { version = "28.0.0" }
sp-block-builder = { version = "26.0.0" }
sc-basic-authorship = { version = "0.34.0" }
substrate-frame-rpc-system = { version = "28.0.0" }
pallet-transaction-payment-rpc = { version = "30.0.0" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "28.0.0" }
frame-benchmarking-cli = { version = "32.0.0" }

# Local Dependencies
defi-blockchain-runtime = { version = "1.0.0", path = "../runtime" }

# CLI-specific dependencies
try-runtime-cli = { version = "0.38.0", optional = true }

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"defi-blockchain-runtime/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"defi-blockchain-runtime/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"sp-runtime/try-runtime",
	"try-runtime-cli/try-runtime",
]
